--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
+        "@prettier/plugin-php": "^0.18.4",
         "@tailwindcss/forms": "^0.5.0",
         "@vue/compiler-sfc": "^3.2.31",
         "autoprefixer": "^10.4.2",
@@ -21,6 +22,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.2",
+        "prettier": "^2.6.2",
         "tailwindcss": "^3.0.18",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0"
