--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@inertiajs/progress": "^0.2.7",
         "@prettier/plugin-php": "^0.18.4",
         "@tailwindcss/forms": "^0.5.0",
+        "@tailwindcss/typography": "^0.5.2",
         "@vue/compiler-sfc": "^3.2.31",
         "autoprefixer": "^10.4.2",
         "axios": "^0.25",
@@ -23,7 +24,7 @@
         "postcss": "^8.4.6",
         "postcss-import": "^14.0.2",
         "prettier": "^2.6.2",
-        "tailwindcss": "^3.0.18",
+        "tailwindcss": "^3.0.0",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0"
     }
